# rust-birds

./: Cargo.toml  package-lock.json  package.json
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  eye.rs  lib.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
